# toycheck

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dune  dune-project  toycheck.opam
src/: annotator.ml  constraint.ml  constraint_finder.ml  dune  scanner.ml  scanner.mli  toycheck.ml  type.ml  typed_term.ml  util.ml
src/parser/: dune  parser.ml  scanner.ml  term.ml  token.ml
src/utils/: CharUtil.ml  PrintUtil.ml  char_util.ml  dune
tests/: dune  test_annotator.ml  test_constraint.ml  test_parser.ml  test_scanner.ml
toycheck/tests/: dune  test_scanner.ml
